Fri Oct 31 12:27:52 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* spec/default.mspec: supports that the build directory != srcdir.

Thu Oct 30 23:32:17 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/test_delegate.rb (test_syscallerror_eq): ignored because the
	  behaviour is now unspecified.

Thu Oct 30 21:32:15 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* array.c (rb_ary_permutation): hide temporal array.

Thu Oct 30 14:45:45 2008  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/trans/single_byte.trans: refactoring to make it easier
	  to add more transcodings (with Yoshihiro Kambayashi)

	* enc/trans/iso-8859-1-tbl.rb: new file to avoid having to
	  treat ISO-8859-1 as special

Thu Oct 30 14:10:46 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* pack.c (pack_pack): templates a, A, Z should propagate encoding
	  of original strings.  templates b, B, h, H brings ASCII-8BIT to
	  the result.

Thu Oct 30 09:31:45 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_locale_encoding): makes an alias for locale.
	  [ruby-dev:36976]

	* encoding.c (rb_enc_set_default_external): ditto for external.

	* encoding.c (rb_enc_set_default_internal): ditto for internal.

Thu Oct 30 03:30:25 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.c (load_file_internal): should not set script encoding to
	  ASCII-8BIT.

	* ruby.c (load_file_internal): do not auto convert scripts even
	  when default_internal is set.  [ruby-core:19579]

Thu Oct 30 02:20:33 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* array.c (rb_ary_sort_bang): remove SEGV when replacing array with
	  embedded one during sort.  [ruby-dev:36983]

	* test/ruby/test_array.rb (test_sort!): add tests for above.

Thu Oct 30 01:44:23 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_array.rb: add some tests.

Thu Oct 30 01:32:15 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* array.c (rb_ary_splice): remove redundant check.

Thu Oct 30 01:24:55 2008  Yusuke Endoh  <mame@tsg.ne.jp>
